CHANGELOG (STABLE):
v2.0 (PUBLIC)
Added a lot more insults, and a brand-new, shiny, beautiful button
This should be the best update yet. Becuase this is our first major update.