@@ -15,7 +15,7 @@
                   "you have the same chance of reproducing as a computer mouse",
                   "you are the human equivalent of a participation award",
                   "There are two things I hate, you and poop. They smell really bad. The poop too.",
-                  "You are about as useful as a broken clock telling the time.",
+                  "You are about as useful as a broken clock telling the time. <br> At least the clock is right twice a day.",
                   "At least criminals can go to jail.",
                   "Get gud at the game.",
                   "I see your future... people are celebrating ... your funeral :(",
@@ -65,7 +65,11 @@
                   "Your parents must be very proud of where you are now",
                   "STOP",
                   "I take no responsibility for any damage to your ego after using this app, <br> It was too big anyway",
-                  "You really bad."
+                  "You really bad.",
+                  "Did that last insult hurt your feelings? Well, you should have seen it coming. You deserve it.",
+                  "Do you even know how to walk?",
+                  "Don't even try the whole belive in yourself thing. I know you'll fail at everything you do.",
+                  "This is proof that the dumb can only get dumber"
 
                   
                   
@@ -87,5 +91,5 @@
             margin-right: auto 
         }
     </style>
-<html/>
+</html>
 
