@@ -1,0 +1,2 @@
+print ("If you can see this, your python is working correctly")
+print ("Go on and use demotivator, you are good to go.")
